# enmeval-py

./: AGENT.md  README.md  VALIDATION_PLAN.md  pyproject.toml
enmeval/: __init__.py  boyce.py  evaluation.py  partitioning.py  tuning.py
examples/: validate_elapid_integration.py
tests/: test_evaluation.py  test_partitioning.py  test_r_parity.py  test_tuning.py
validation/: generate_r_reference.R
